--- a/ecclesia/lectio/mateo/mateo5.html
+++ b/ecclesia/lectio/mateo/mateo5.html
@@ -591,8 +591,12 @@ El Magisterio enseña que:<br>
           <details class="select">
             <summary>El Texto</summary>
             <p>
-              <br />
-              <br />
+          Mat 5:17 «No penséis que he venido a abolir la Ley y los Profetas. No he venido a abolir, sino a dar cumplimiento. 	<br>
+Mat 5:18 Os lo aseguro: mientras duren el cielo y la tierra, no dejará de estar vigente ni una i ni una tilde de la ley sin que todo se cumpla. 	<br>
+Mat 5:19 Por tanto, el que traspase uno de estos mandamientos más pequeños y así lo enseñe a los hombres, será el más pequeño en el Reino de los Cielos; en cambio, el que los observe y los enseñe, ése será grande en el Reino de los Cielos. 	<br>
+Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los escribas y fariseos, no entraréis en el Reino de los Cielos. 	<br>
+«No penséis que he venido a abolir la Ley y los Profetas. No he venido a abolir, sino a dar cumplimiento. 	<br>
+
             </p>
           </details>
         </li>
@@ -600,9 +604,13 @@ El Magisterio enseña que:<br>
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
+            <br>
+                  Diferencias destacadas:<br>
+            +	Jerusalén usa un lenguaje más formal y cercano al estilo litúrgico.<br>
+            +	Vulgata conserva el latín clásico, con términos como jota y apex que reflejan la precisión del texto hebreo.<br>
+            +	NVI opta por una expresión más contemporánea y accesible, ideal para lectura devocional o estudio moderno.<br>
+            Estas variaciones pueden influir en la interpretación teológica, especialmente en temas como el cumplimiento de la Ley, la autoridad de los mandamientos, y la justicia en el Reino de los Cielos.<br>
+
             </p>
           </details>
         </li>
@@ -610,9 +618,23 @@ El Magisterio enseña que:<br>
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
+            <br> Mateo 5,17-20 tiene varios textos y temas paralelos que ayudan a entender mejor su contexto y significado. Esta perícopa forma parte del Sermón del Monte y trata sobre la relación de Jesús con la Ley y los Profetas. Aquí te comparto algunos paralelos relevantes:<br>
+            + Textos paralelos en los Evangelios<br>
+            +	Lucas 16,17: “Es más fácil que pasen el cielo y la tierra, que se frustre una sola letra de la Ley.”<br>
+            → Refuerza la idea de la permanencia de la Ley.<br>
+            +	Lucas 24,44: “Todo lo que está escrito de mí en la Ley de Moisés, en los Profetas y en los Salmos debe cumplirse.”<br>
+            → Jesús como cumplimiento de las Escrituras.<br>
+            +	Juan 5,45-47: Jesús apela a Moisés como testigo de su misión.<br>
+            +	Romanos 3,31: “¿Anulamos la Ley por la fe? ¡De ninguna manera! Más bien, confirmamos la Ley.”<br>
+            → Pablo interpreta la Ley a la luz de la fe cristiana.<br>
+             Temas teológicos paralelos<br>
+            +	Cumplimiento vs. abolición de la Ley: Jesús no la elimina, sino que la lleva a su plenitud.<br>
+            +	Justicia superior: Se exige una justicia que supere la mera observancia legalista.<br>
+            +	Autoridad de Jesús: Se presenta como intérprete legítimo de la Ley.<br>
+            + Referencias en el Antiguo Testamento<br>
+            +	Deuteronomio 4,2: “No añadiréis ni quitaréis a la palabra que yo os mando.”<br>
+            +	Isaías 42,21: “El Señor se complació por causa de su justicia en engrandecer la Ley.”<br>
+
             </p>
           </details>
         </li>
@@ -620,9 +642,24 @@ El Magisterio enseña que:<br>
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
+            <br>+ Los temas teológicos más relevantes de Mateo 5,17-20 giran en torno a la identidad de Jesús, la continuidad de la revelación divina, y la ética del Reino de los cielos. Aquí te los desgloso:<br>
+             1. Jesús como cumplimiento de la Ley y los Profetas<br>
+            +	Jesús no vino a abolir la Ley, sino a llevarla a su plenitud.<br>
+            +	Se presenta como el intérprete autorizado de la voluntad de Dios.<br>
+            +	Su enseñanza revela el sentido profundo de los mandamientos, más allá de la literalidad.<br>
+             2. La permanencia y autoridad de la Ley<br>
+            +	La Ley conserva su valor hasta que todo se haya cumplido.<br>
+            +	Jesús reafirma su vigencia, pero la reinterpreta desde el corazón y no desde la mera observancia externa.<br>
+             3. La justicia superior del Reino<br>
+            +	Se exige una justicia que supere la de los escribas y fariseos.<br>
+            +	Esta justicia no es solo legalista, sino interior, relacional y transformadora.<br>
+            +	Implica vivir en coherencia con el espíritu de la Ley, no solo con su letra.<br>
+             4. La enseñanza responsable<br>
+            +	Quien relativiza o debilita los mandamientos y enseña a otros a hacerlo, será considerado “muy pequeño” en el Reino.<br>
+            +	En cambio, quien los vive y enseña con fidelidad, será grande en el Reino.<br>
+             5. La escatología implícita<br>
+            +	La frase “hasta que pasen el cielo y la tierra” sugiere una dimensión escatológica, donde la plenitud del Reino se manifestará y la Ley encontrará su total cumplimiento.<br>
+
             </p>
           </details>
         </li>
@@ -630,9 +667,22 @@ El Magisterio enseña que:<br>
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
+            <br>Varios Padres de la Iglesia reflexionaron profundamente sobre Mateo 5,17-20, especialmente en relación con la Ley, la justicia y el cumplimiento en Cristo. Aquí te comparto algunos aportes destacados:<br>
+             San Agustín<br>
+            •	En su obra De sermone Domini in monte, interpreta que Jesús no abroga la Ley, sino que la lleva a su plenitud interior.<br>
+            •	Destaca que la justicia del Reino exige más que la observancia externa: implica una transformación del corazón.<br>
+            •	Subraya que no basta con no matar, sino que hay que evitar incluso el enojo injusto.<br>
+             San Juan Crisóstomo<br>
+            •	En sus Homilías sobre Mateo, afirma que Jesús purifica la Ley de las interpretaciones farisaicas.<br>
+            •	Ve en este pasaje una reafirmación del valor moral de la Ley, pero también una llamada a vivirla con profundidad espiritual.<br>
+             San Jerónimo<br>
+            •	En su comentario sobre Mateo, señala que Jesús no contradice la Ley, sino que la interpreta con autoridad divina.<br>
+            •	Defiende que la Ley sigue vigente en su dimensión ética, pero trascendida por el amor cristiano.<br>
+             Catena Aurea (compilación patrística de Santo Tomás de Aquino)<br>
+            •	Reúne comentarios de varios Padres como Hilario de Poitiers, Remigio y el Pseudo-Crisóstomo.<br>
+            •	Todos coinciden en que Jesús no destruye la Ley, sino que la cumple en sí mismo y la eleva a una exigencia más alta.<br>
+            Puedes explorar más en fuentes como la Catena Aurea o en comentarios patrísticos recopilados por autores como Matthew Henry o Juan Calvino.<br>
+
             </p>
           </details>
         </li>
@@ -641,8 +691,25 @@ El Magisterio enseña que:<br>
           <details class="select">
             <summary>Magisterio</summary>
             <p>
-              <br />
-              <br />
+             El Magisterio de la Iglesia ha abordado Mateo 5,17-20 con profundidad, especialmente en lo que respecta a la relación entre la Ley antigua y su cumplimiento en Cristo. Aquí te presento los puntos más relevantes:<br>
+       1. Jesús como plenitud de la Ley<br>
+      •	El Catecismo de la Iglesia Católica (CIC) afirma que Cristo no abolió la Ley, sino que la llevó a su plenitud (CIC 577–582).<br>
+      •	Se enseña que Jesús cumple perfectamente la Ley mosaica, revelando su sentido espiritual y definitivo.<br>
+      •	La Ley ceremonial y judicial del Antiguo Testamento encuentra su cumplimiento en Cristo, y por tanto ya no obliga a los cristianos.<br>
+      + 2. La vigencia de la Ley moral<br>
+      •	La Iglesia sostiene que la Ley moral permanece vigente, porque expresa la voluntad de Dios para todos los tiempos (CIC 1950–1974).<br>
+      •	Los mandamientos, especialmente los del Decálogo, siguen siendo norma de vida cristiana, interpretados a la luz del Evangelio.<br>
+       3. La justicia superior del Reino<br>
+      •	El Magisterio destaca que la justicia que exige Jesús supera la mera observancia externa.<br>
+      •	Se trata de una justicia interior, vivida en el amor, que transforma el corazón y las relaciones humanas (CIC 1965–1970).<br>
+      + 4. La enseñanza y autoridad de Jesús<br>
+      •	Jesús se presenta como el nuevo legislador, con autoridad divina para interpretar y perfeccionar la Ley.<br>
+      •	Esta autoridad se transmite a la Iglesia, que enseña con fidelidad la moral cristiana y llama a vivirla con coherencia.<br>
+       5. La dimensión escatológica<br>
+      •	El cumplimiento total de la Ley se vincula con la venida definitiva del Reino.<br>
+      •	La Iglesia enseña que la Ley encuentra su plenitud en Cristo, y que esta plenitud se manifestará plenamente al final de los tiempos.<br>
+            </p>
+
             </p>
           </details>
         </li>
@@ -650,10 +717,13 @@ El Magisterio enseña que:<br>
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+            <li>Jesús es el intérprete de la Ley</li>
+            <li>En este pasaje se muestra un desarrollo progresivo, continuidad, donde lo esencial permanece</li>
+            <li>Toda Verdad implica una transformación del corazón</li>
+
+         
+          </ol>
           </details>
         </li>
         <!-- ****************************** -->
