--- a/ecclesia/lectio/mateo/mateo5.html
+++ b/ecclesia/lectio/mateo/mateo5.html
@@ -13,7 +13,7 @@
         <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio">
-          <img src="../../../media/ESCUDOCARM.png" alt="" class="logoC" />
+          <img src="../../../../media/ESCUDOCARM.png" alt="" class="logoC" />
         </a>
         <a href="./index.html" class="nombre">INICIO</a>
       </div>
@@ -749,8 +749,42 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>El Texto</summary>
             <p>
-              <br />
-              <br />
+          Mat 5:20 «Porque os digo que, si vuestra justicia no es mayor que la de los escribas y fariseos, no entraréis en el Reino de los Cielos. 	<br>
+	<br>
+Mat 5:21 «Habéis oído que se dijo a los antepasados: No matarás; y aquel que mate será reo ante el tribunal. 	<br>
+Mat 5:22 Pues yo os digo: Todo aquel que se encolerice contra su hermano, será reo ante el tribunal; pero el que llame a su hermano “imbécil”, será reo ante el Sanedrín; y el que le llame “renegado”, será reo de la gehenna de fuego. 	<br>
+Mat 5:23 Si, pues, al presentar tu ofrenda en el altar te acuerdas entonces de que tu hermano tiene algo contra ti, 	<br>
+Mat 5:24 deja tu ofrenda allí, delante del altar, y vete primero a reconciliarte con tu hermano; luego vuelves y presentas tu ofrenda. 	<br>
+Mat 5:25 Ponte enseguida a buenas con tu adversario mientras vas con él por el camino; no sea que tu adversario te entregue al juez y el juez al guardia, y te metan en la cárcel. 	<br>
+Mat 5:26 Yo te aseguro: no saldrás de allí hasta que no hayas pagado el último céntimo. 	<br>
+	<br>
+Mat 5:27 «Habéis oído que se dijo: No cometerás adulterio. 	<br>
+Mat 5:28 Pues yo os digo: Todo el que mira a una mujer deseándola, ya cometió adulterio con ella en su corazón. 	<br>
+Mat 5:29 Si, pues, tu ojo derecho te es ocasión de pecado, sácatelo y arrójalo de ti; más te conviene que se pierda uno de tus miembros, que no que todo tu cuerpo sea arrojado a la gehenna. 	<br>
+Mat 5:30 Y si tu mano derecha te es ocasión de pecado, córtatela y arrójala de ti; más te conviene que se pierda uno de tus miembros, que no que todo tu cuerpo vaya a la gehenna. 	<br>
+	<br>
+Mat 5:31 «También se dijo: El que repudie a su mujer, que le dé acta de divorcio. 	<br>
+Mat 5:32 Pues yo os digo: Todo el que repudia a su mujer, excepto en caso de fornicación, la hace ser adúltera; y el que se case con una repudiada, comete adulterio. 	<br>
+	<br>
+Mat 5:33 «Habéis oído también que se dijo a los antepasados: No perjurarás, sino que cumplirás al Señor tus juramentos. 	<br>
+Mat 5:34 Pues yo os digo que no juréis en modo alguno: ni por el Cielo, porque es el trono de Dios, 	<br>
+Mat 5:35 ni por la Tierra, porque es el escabel de sus pies; ni por Jerusalén, porque es la ciudad del gran rey. 	<br>
+Mat 5:36 Ni tampoco jures por tu cabeza, porque ni a uno solo de tus cabellos puedes hacerlo blanco o negro. 	<br>
+Mat 5:37 Sea vuestro lenguaje: “Sí, sí” “no, no”: que lo que pasa de aquí viene del Maligno. 	<br>
+	<br>
+Mat 5:38 «Habéis oído que se dijo: Ojo por ojo y diente por diente. 	<br>
+Mat 5:39 Pues yo os digo: no resistáis al mal; antes bien, al que te abofetee en la mejilla derecha ofrécele también la otra; 	<br>
+Mat 5:40 al que quiera pleitear contigo para quitarte la túnica déjale también el manto; 	<br>
+Mat 5:41 y al que te obligue a andar una milla vete con él dos. 	<br>
+Mat 5:42 A quien te pida da, y al que desee que le prestes algo no le vuelvas la espalda. 	<br>
+	<br>
+Mat 5:43 «Habéis oído que se dijo: Amarás a tu prójimo y odiarás a tu enemigo. 	<br>
+Mat 5:44 Pues yo os digo: Amad a vuestros enemigos y rogad por los que os persigan, 	<br>
+Mat 5:45 para que seáis hijos de vuestro Padre celestial, que hace salir su sol sobre malos y buenos, y llover sobre justos e injustos. 	<br>
+Mat 5:46 Porque si amáis a los que os aman, ¿qué recompensa vais a tener? ¿No hacen eso mismo también los publicanos? 	<br>
+Mat 5:47 Y si no saludáis más que a vuestros hermanos, ¿qué hacéis de particular? ¿No hacen eso mismo también los gentiles? 	<br>
+Mat 5:48 Vosotros, pues, sed perfectos como es perfecto vuestro Padre celestial. 	<br>
+
             </p>
           </details>
         </li>
@@ -759,8 +793,28 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>Variaciones en el Texto</summary>
             <p>
-              <br />
-              <br />
+El pasaje de Mateo 5,20-48 presenta variaciones textuales notables entre traducciones como la Biblia de Jerusalén, la Vulgata, la Nueva Versión Internacional (NVI), y otras. Estas diferencias no suelen alterar el mensaje central, pero sí pueden influir en la interpretación teológica, el tono y la claridad. interesantes:<br>
++ Variaciones textuales<br>
+•	Mateo 5,22<br>
+o	NVI: “Todo el que se enoje con su hermano quedará sujeto al juicio…”<br>
+o	Biblia de Jerusalén: “Todo aquel que se encolerice contra su hermano será reo ante el tribunal…”<br>
+o	Vulgata: “Omnis qui irascitur fratri suo reus erit iudicio…”<br>
+o	+Algunas versiones incluyen “sin causa” (“sin razón”), lo que suaviza la condena. Esta frase está ausente en muchas traducciones modernas.<br>
+•	Mateo 5,37<br>
+o	NVI: “Cuando ustedes digan ‘sí’, que sea realmente sí…”<br>
+o	Biblia de Jerusalén: “Sea vuestro lenguaje: ‘Sí, sí’; ‘no, no’…”<br>
+o	Vulgata: “Sit autem sermo vester: est est, non non…”<br>
+o	+La forma de expresar la integridad en el habla varía en estilo y énfasis.<br>
+•	Mateo 5,44<br>
+o	NVI: “Amen a sus enemigos y oren por quienes los persiguen…”<br>
+o	Biblia de Jerusalén: “Amad a vuestros enemigos y rogad por los que os persigan…”<br>
+o	Vulgata: “Diligite inimicos vestros: benefacite his qui oderunt vos…”<br>
+o	+Algunas versiones añaden frases como “bendigan a quienes los maldicen”, que aparecen en manuscritos antiguos y en Lucas 6,27-28.<br>
+ ¿Por qué ocurren estas diferencias?<br>
+•	Origen textual: Las traducciones se basan en distintos manuscritos griegos, latinos o hebreos.<br>
+•	Decisiones editoriales: Algunas versiones buscan fidelidad literal (como la Jerusalén), otras claridad moderna (como la NVI).<br>
+•	Tradición teológica: La Vulgata refleja la tradición católica latina, mientras que la NVI se orienta a un público evangélico contemporáneo.<br>
+
             </p>
           </details>
         </li>
@@ -769,8 +823,28 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>Paralelos</summary>
             <p>
-              <br />
-              <br />
+La perícopa de Mateo 5,20-48 —parte del Sermón del Monte— tiene varios textos y temas paralelos en otros libros bíblicos, especialmente en el Evangelio de Lucas y en el Antiguo Testamento. <br>
++ Paralelos en los Evangelios<br>
+•	Lucas 6,27-36<br>
+Este pasaje contiene enseñanzas similares sobre amar a los enemigos, bendecir a quienes nos maldicen y hacer el bien sin esperar recompensa.<br>
++Es considerado el paralelo más directo al bloque de Mateo 5,43-48.<br>
+•	Lucas 6,29-30<br>
+Coincide con Mateo 5,39-42 sobre no resistirse al mal, ofrecer la otra mejilla y dar al que pide.<br>
+•	Lucas 6,37-38<br>
+Aunque no está en Mateo 5,20-48, complementa el tema del juicio y la misericordia.<br>
++ Ecos del Antiguo Testamento<br>
+•	Levítico 19,18<br>
+“Amarás a tu prójimo como a ti mismo.” Jesús lo cita y lo amplía en Mateo 5,43-44.<br>
+•	Éxodo 21,23-25<br>
+La ley del talión (“ojo por ojo”) que Jesús reinterpreta en Mateo 5,38-39.<br>
+•	Levítico 19,2<br>
+“Sed santos, porque yo, el Señor vuestro Dios, soy santo.”<br>
++Este principio se refleja en Mateo 5,48: “Sed perfectos como vuestro Padre celestial es perfecto.”<br>
++ Temas teológicos paralelos<br>
+•	Justicia superior a la de los fariseos (Mateo 5,20)<br>
+Se relaciona con la idea paulina de la justicia por la fe (Romanos 3,21-22).<br>
+•	Interiorización de la ley<br>
+Jesús lleva los mandamientos al plano del corazón (ira, deseo, juramento), lo que conecta con Jeremías 31,33: “Pondré mi ley en su interior…”<br>
             </p>
           </details>
         </li>
@@ -779,8 +853,32 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>Temas</summary>
             <p>
-              <br />
-              <br />
+La perícopa de Mateo 5,20-48 está cargada de profundidad teológica.<br> Jesús no solo interpreta la Ley, sino que la radicaliza desde el corazón, revelando el espíritu detrás de los mandamientos.<br>
+ 1. La justicia del Reino de Dios<br>
+•	Jesús exige una justicia superior a la de los escribas y fariseos (v.20).<br>
+•	No basta con cumplir externamente la Ley; se requiere una transformación interior.<br>
+•	Esta justicia se vincula con la gracia y la conversión, no con el legalismo.<br>
+ 2. Interiorización de la Ley<br>
+•	Jesús lleva los mandamientos al plano del corazón y la intención: <br>
+o	Ira = homicidio (v.22)<br>
+o	Deseo = adulterio (v.28)<br>
+o	Juramento = integridad total (v.37)<br>
+•	Se anticipa la nueva alianza donde la ley se escribe en el corazón (Jeremías 31,33).<br>
++ 3. Amor radical y universal<br>
+•	Amar al enemigo (v.44) es el culmen del amor cristiano.<br>
+•	Este amor imita el amor de Dios, que hace salir el sol sobre buenos y malos (v.45).<br>
+•	Se supera la ley del talión (v.38) con la no violencia activa.<br>
++ 4. La perfección como meta espiritual<br>
+•	“Sed perfectos como vuestro Padre celestial es perfecto” (v.48).<br>
+•	La perfección aquí no es impecabilidad, sino madurez moral y plenitud en el amor.<br>
+•	Se conecta con Levítico 19,2: “Sed santos, porque yo soy santo”.<br>
+ 5. La autoridad de Jesús como intérprete de la Ley<br>
+•	Jesús dice “pero yo os digo…” con autoridad divina.<br>
+•	Se presenta como el cumplimiento de la Ley (v.17), no su abolición.<br>
+•	Esto revela su identidad como el nuevo Moisés y el Hijo de Dios.<br>
+  <br><br>
+Estos temas hacen de Mateo 5,20-48 una piedra angular de la ética cristiana.<br>
+
             </p>
           </details>
         </li>
@@ -789,8 +887,23 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>Patrística</summary>
             <p>
-              <br />
-              <br />
+Varios Padres de la Iglesia reflexionaron profundamente sobre la perícopa de Mateo 5,20-48, especialmente en lo que respecta a la interpretación espiritual de la Ley, el amor a los enemigos y la perfección cristiana.<br>
+<br>
++ Comentarios patrísticos relevantes<br>
+•	San Agustín<br>
+En su obra De sermone Domini in monte, comenta versículo por versículo el Sermón del Monte. Destaca que Jesús no abroga la Ley, sino que la lleva a su plenitud interior, y que la perfección cristiana consiste en el amor universal, incluso hacia los enemigos.<br>
+•	San Juan Crisóstomo<br>
+En sus Homilías sobre Mateo, subraya que el mandamiento de “poner la otra mejilla” no es debilidad, sino una fuerza espiritual que vence el mal con el bien. Ve en estas enseñanzas una llamada a la imitación de Dios.<br>
+•	San Jerónimo<br>
+En sus comentarios bíblicos, interpreta Mateo 5,48 (“Sed perfectos como vuestro Padre celestial es perfecto”) como una invitación a la santidad, entendida como plenitud del amor y no como impecabilidad.<br>
+•	Pseudo-Crisóstomo<br>
+En el Opus imperfectum in Matthaeum, reflexiona sobre la radicalidad del amor cristiano y la necesidad de superar la justicia legalista con una justicia del corazón.<br>
++En la tradición posterior<br>
+•	Catena Aurea (compilada por Santo Tomás de Aquino)<br>
+Reúne comentarios de varios Padres sobre cada versículo de Mateo 5,20-48, mostrando cómo esta sección fue vista como el corazón de la ética cristiana.<br>
+•	Concilio Vaticano II<br>
+Aunque no es patrístico, retoma esta perícopa en Gaudium et Spes para hablar de la dignidad humana, la paz y la no violencia, en continuidad con la tradición de los Padres.<br>
+<br>
             </p>
           </details>
         </li>
@@ -799,8 +912,31 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
           <details class="select">
             <summary>Magisterio</summary>
             <p>
-              <br />
-              <br />
+El Magisterio de la Iglesia ha abordado los temas de Mateo 5,20-48 —especialmente la justicia interior, el amor a los enemigos y la perfección cristiana— en diversos documentos, catequesis y enseñanzas. Aquí te resumo lo más relevante:<br /><br />
+1. Justicia superior y cumplimiento de la Ley<br />
+•	Catecismo de la Iglesia Católica (CEC)<br />
+o	CEC 1968: “La Ley nueva... cumple, perfecciona, supera y conduce la antigua Ley hacia su plenitud.”<br />
+o	CEC 1972: “La Ley nueva es la gracia del Espíritu Santo recibida por la fe en Cristo... obra mediante la caridad.”<br />
++El Magisterio enseña que Jesús no abolió la Ley, sino que la interiorizó y elevó, haciendo de la caridad el principio rector.<br /><br />
+2. Amor a los enemigos<br />
+•	Encíclica Deus Caritas Est (Benedicto XVI, 2005)<br />
+o	Afirma que el amor cristiano no se limita al afecto, sino que incluye el amor a los enemigos, como expresión de la gracia divina.<br />
+•	Catecismo (CEC 1825)<br />
+o	“El amor a los enemigos es posible... transforma al discípulo tomando parte en la misericordia de Dios.”<br />
++El Magisterio considera este amor como signo distintivo del cristiano y participación en el amor divino.<br /><br />
+3. Perfección cristiana<br />
+•	CEC 2013-2015<br />
+o	La perfección cristiana es una llamada universal a la santidad: “Sed perfectos como vuestro Padre celestial es perfecto.”<br />
+o	Se entiende como madurez espiritual, no como impecabilidad.<br />
+•	Concilio Vaticano II – Lumen Gentium 11 y 40<br />
+o	Todos los fieles están llamados a la plenitud de la vida cristiana y a la perfección de la caridad.<br />
++La perfección es vista como vivir plenamente el amor, en comunión con Dios y los demás.<br /><br />
+4. No violencia y reconciliación<br />
+•	Encíclica Fratelli Tutti (Francisco, 2020)<br />
+o	Promueve la no violencia activa y el perdón como caminos hacia la paz.<br />
+o	Mateo 5,39-44 es citado como fundamento evangélico para la amistad social.<br />
++El Magisterio propone una ética del Evangelio que transforma las relaciones humanas desde la misericordia.<br />
+
             </p>
           </details>
         </li>
@@ -808,10 +944,11 @@ Mat 5:20  «Porque os digo que, si vuestra justicia no es mayor que la de los es
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+            <li>De lo que se trata es de amar, al cumplir la ley, al actuar, en las relaciones personales</li>
+            <li>Jesús nos muestra como es Dios, para que nos sirva de guía</li>
+            <li>Las acciones deben ser el fruto de la convversión del corazón</li>
+          </ol>
           </details>
         </li>
         <!-- ****************************** -->
