--- a/ecclesia/lectio/mateo/mateo6.html
+++ b/ecclesia/lectio/mateo/mateo6.html
@@ -141,7 +141,7 @@
               y trata sobre la limosna y la intención con la que se realiza: no
               para ser vistos por los hombres, sino para agradar a Dios.
               <br />
-              ++ Textos paralelos en los Evangelios
+              +++
               <br />
               <br />
               + Mateo 5,16: Aunque parece contradictorio, este versículo dice
@@ -782,8 +782,6 @@
            Explorar estos comentarios en profundidad en deiverbum.org, donde se recopilan textos patrísticos versículo por versículo.<br>
             </p>
           </details>
-</p>
-          </details>
         </li>
         <!-- ****************************** -->
         <li>
@@ -868,35 +866,125 @@
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p></p>
+            <p>
+              Existen variaciones textuales notables en Mateo 6,16–18 entre distintas traducciones bíblicas reconocidas.<br>
+              Aunque el mensaje central se mantiene —la instrucción de Jesús sobre cómo ayunar sin buscar reconocimiento humano— cada versión aporta matices lingüísticos y teológicos que pueden influir en la interpretación.<br>
+              <br>
+              Traducción	Mateo 6,16–18	Notas destacadas<br>
+              Biblia de Jerusalén	“Cuando ayunéis, no pongáis cara triste... perfuma tu cabeza y lava tu rostro...”	Usa un lenguaje poético y formal. Enfatiza el contraste entre el hipócrita y el discípulo auténtico.<br>
+              Vulgata Latina	“Cum autem ieiunatis, nolite fieri sicut hypocritae tristes...”	Texto base para muchas traducciones históricas. El verbo “perfuma” se traduce como “ungue”, lo que sugiere un acto ritual.<br>
+              Nueva Versión Internacional (NVI)	“Cuando ayunen, no pongan cara triste... perfúmate la cabeza y lávate la cara...”	Lenguaje contemporáneo y accesible. Mantiene la estructura pero moderniza el vocabulario.<br>
+              Biblia de las Américas (NBLA)	“No pongan cara triste... unge tu cabeza y lava tu rostro...”	Conserva un tono reverente y preciso. Usa “unge” en lugar de “perfuma”, lo que puede tener implicaciones teológicas.<br>
+              Interlineal griego-español	Refleja el texto original griego palabra por palabra	Útil para estudios exegéticos. Muestra que el verbo griego “ἀλείφω” puede traducirse como “ungir” o “perfumar”.<br>
+             + ¿Por qué importa esto?<br>
+              Las variaciones no solo reflejan diferencias lingüísticas, sino también enfoques teológicos y culturales.<br>
+              Por ejemplo, “perfumar” puede sugerir una actitud alegre, mientras que “ungir” puede tener connotaciones litúrgicas o espirituales.<br>
+            </p>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Paralelos</summary>
-            <p></p>
+            <p>
+              Mateo 6,16–18 tiene textos y temas paralelos que enriquecen su comprensión. Esta perícopa sobre el ayuno forma parte del Sermón del Monte y se conecta con otras enseñanzas de Jesús sobre la práctica religiosa auténtica.<br>
+          <br>
+              Aunque este pasaje es exclusivo de Mateo, hay ecos y paralelos temáticos en otros lugares:<br>
+              • Isaías 58,3–7: Crítica al ayuno hipócrita y llamado a un ayuno que transforme la vida y beneficie al prójimo.<br>
+              • Joel 2,12–13: Llamado a ayunar con el corazón, no solo con gestos externos.<br>
+              • Lucas 18,9–14: Parábola del fariseo y el publicano, que ilustra la diferencia entre religiosidad ostentosa y humildad sincera.<br>
+              • Mateo 6,1–6: En el mismo capítulo, Jesús habla sobre la limosna y la oración en secreto, con la misma estructura y mensaje que el pasaje sobre el ayuno.<br>
+              • Mateo 9,14–15 / Marcos 2,18–20 / Lucas 5,33–35: Jesús responde a preguntas sobre el ayuno, explicando que sus discípulos no ayunan mientras Él está con ellos, pero lo harán cuando sea quitado.<br>
+             + Temas paralelos<br>
+              • Hipocresía religiosa: Jesús denuncia las prácticas que buscan aprobación humana en lugar de comunión con Dios.<br>
+              • La recompensa divina: Se repite la idea de que Dios ve en lo secreto y recompensa en lo público.<br>
+              • La espiritualidad interior vs. exterior: El énfasis está en la autenticidad del corazón, no en las apariencias.<br>
+            </p>
+            </details>
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p></p>
+            <p>
+              Los temas teológicos más relevantes de Mateo 6,16–18 giran en torno a la autenticidad espiritual y la relación íntima con Dios. Esta perícopa, parte del Sermón del Monte, no solo regula la práctica del ayuno, sino que revela profundas verdades sobre la vida interior del creyente.<br>
+              + Temas teológicos clave<br>
+              • La espiritualidad en lo secreto<br>
+              o Jesús enfatiza que el ayuno debe ser una práctica íntima entre el creyente y Dios, no un espectáculo público.<br>
+              o Esto subraya la idea de que Dios ve el corazón y recompensa lo que se hace en lo oculto.<br>
+              • La denuncia de la hipocresía religiosa<br>
+              o Se critica a quienes ayunan para ser vistos por los demás, revelando una teología que valora la sinceridad sobre la apariencia.<br>
+              o El ayuno, como otras prácticas espirituales, pierde su valor si se convierte en una herramienta de vanagloria.<br>
+              • La recompensa divina<br>
+              o Se introduce el concepto de una recompensa espiritual que proviene de Dios, no del reconocimiento humano.<br>
+              o Esto conecta con la idea de que el Reino de Dios opera bajo una lógica distinta a la del mundo.<br>
+              • La conversión interior<br>
+              o El ayuno es presentado como un medio para abrir el alma a Dios, no simplemente como abstinencia física.<br>
+              o Tiene valor simbólico (expresa humildad) y funcional (cultiva la vida espiritual).<br>
+              • La pedagogía del cuerpo<br>
+              o El texto sugiere que el cuerpo puede ser educador del alma: al privarse de placeres legítimos, se crea espacio para lo trascendente.<br>
+             + En resumen, esta perícopa no solo regula una práctica religiosa, sino que redefine su propósito: el ayuno no es para impresionar, sino para transformar. Es una invitación a vivir la fe con humildad, autenticidad y profunda comunión con Dios.
+            </p>
+          </details>
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Patrística</summary>
-            <p></p>
+            <p>Varios Padres de la Iglesia comentaron Mateo 6,16–18, especialmente en el contexto del ayuno y la vida espiritual auténtica. Sus reflexiones aparecen en obras como la Catena Aurea y en homilías patrísticas que abordan el Sermón del Monte.<br>
+     + Algunos comentarios patrísticos relevantes<br>
+      •	San Juan Crisóstomo<br>
+      En sus Homilías sobre Mateo, destaca que el ayuno debe ser acompañado de humildad y alegría interior. Critica la ostentación religiosa y subraya que el verdadero ayuno es el que transforma el corazón.<br>
+      •	San Agustín<br>
+      En De sermone Domini in monte, interpreta el ayuno como parte de una trilogía espiritual junto con la oración y la limosna. Enfatiza que el Padre “que ve en lo secreto” recompensa la sinceridad del alma, no los gestos externos.<br>
+      •	San Jerónimo<br>
+      En sus comentarios bíblicos, señala que “perfumar la cabeza” y “lavar el rostro” son símbolos de la alegría espiritual que debe acompañar el sacrificio, evitando la tristeza fingida.<br>
+      •	San Gregorio Magno<br>
+      En sus escritos morales, vincula el ayuno con la purificación interior y la lucha contra los vicios, más que con la simple abstinencia alimentaria.<br>
+      •	Pseudo-Crisóstomo<br>
+      En el Opus imperfectum in Matthaeum, interpreta el ayuno como una forma de ocultar la virtud para que sea vista solo por Dios, no por los hombres.<br>
+      Puedes encontrar una recopilación de estos comentarios en sitios como Deiverbum.org, que ofrece la Catena Aurea y otras fuentes patrísticas por versículo.<br>
+            </p>
+            </details>
+
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
-          <details class="select">
+            <details class="select">
             <summary>Magisterio</summary>
-            <p></p>
+            <p>
+              El Magisterio de la Iglesia ha abordado los temas de Mateo 6,16–18 —especialmente el ayuno, la autenticidad espiritual y la vida interior— en diversos documentos y enseñanzas.<br>
+              Aunque no hay una encíclica dedicada exclusivamente a esta perícopa, sus principios están profundamente integrados en la doctrina católica.<br>
+               Principales enseñanzas del Magisterio<br>
+              • Autenticidad en la vida espiritual<br>
+              o El Catecismo de la Iglesia Católica (n. 1434–1438) enseña que el ayuno, junto con la oración y la limosna, es una expresión de conversión interior.<br>
+              o Se insiste en que estas prácticas deben hacerse con humildad, sin buscar reconocimiento humano, en línea con Mateo 6.<br>
+              • El ayuno como acto de penitencia<br>
+              o En documentos como Paenitemini (1966), el Papa Pablo VI reafirma el valor del ayuno como medio de purificación y solidaridad con los pobres.<br>
+              o El ayuno no es solo abstinencia física, sino una disposición del corazón que busca acercarse a Dios.<br>
+              • La recompensa divina<br>
+              o El Magisterio subraya que Dios ve en lo secreto y recompensa la sinceridad del alma, como lo afirma Jesús en este pasaje.<br>
+              o Esta idea aparece también en la exhortación apostólica Evangelii Gaudium (n. 150–154), donde el Papa Francisco invita a una espiritualidad que brota del corazón y no de la apariencia.<br>
+              • La oración y el recogimiento interior<br>
+              o En Veritatis Splendor y Deus Caritas Est, se destaca que la vida cristiana debe estar marcada por una relación íntima con Dios, vivida en lo oculto y en lo cotidiano.<br>
+            Reflexión litúrgica y pastoral<br>
+              Durante la Cuaresma, este texto se proclama el Miércoles de Ceniza, y la Iglesia lo utiliza para invitar a los fieles a una renovación interior.<br>
+              La liturgia lo interpreta como un llamado a vivir la fe con autenticidad, lejos del exhibicionismo religioso.<br>
+            </p>
+            </details>
+
+
+</p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -904,10 +992,11 @@
           <details class="select">
             <summary>Metanoia</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>La sinceridad y coherencia muestra el nivel de la fe auténtica.</li>
+              <li>Llamado a vivir con alegría y amor la relación con Dios</li>
+              <li>El poder reconocer nuestros errores es un signo de apertura a la Gracia</li>
+              <li>El  verdadero ayuno es el que transforma el corazón.</li>
+              <li>La vida en el Espíritu es una relación en lo secreto, la cual debe ir convirtiendose en un distintivo de toda nuestra acción en el Señor</li>
             </ol>
           </details>
         </li>
